[package]
name = "himmel_display_manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdl2 = { version = ">=0.33", features = ["bundled", "static-link"] } 
skulpin = { version = "0.14.1", features = ["skia-complete"] }
winit = "0.26.1"

