[package]
name = "himmel_display_manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.58"
libc = "0.2.126"
pam-sys = "0.5.6"
sdl2 = { version = ">=0.33", features = ["bundled", "static-link"] } 
skulpin = { version = "0.14.1", features = ["skia-complete"] }
users = "0.11.0"
winit = "0.26.1"

